gen/drive/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-drive2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/drive/v2/lib)
error[E0308]: mismatched types
     --> gen/drive/v2/lib/src/lib.rs:12016:16
      |
12016 |             Ok(req.send()?.error_for_status()?)
      |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `reqwest::response::Response`
      |
      = note: expected type `()`
                 found type `reqwest::response::Response`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `google-drive2`.

To learn more, run the command again with --verbose.
